--- a/BlanketShop/Web.config
+++ b/BlanketShop/Web.config
@@ -13,7 +13,7 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
     <connectionStrings>
-        <add name="BlanketShopDbContext" connectionString="data source=DESKTOP-KDA1PHJ\SQLEXPRESS;initial catalog=BlanketShop;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+        <add name="BlanketShopDbContext" connectionString="data source=BICHPTN-PC\SQLEXPRESS;initial catalog=BlanketShop;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
       </connectionStrings>
 
 
