--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -91,6 +91,7 @@
     <Compile Include="EF\sysdiagrams.cs" />
     <Compile Include="EF\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\OrderDetailsModel.cs" />
     <Compile Include="ViewModel\ProductViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
